--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "gpt-function-test",
+  "name": "guess-my-gig",
   "version": "1.0.0",
   "main": "main.js",
   "license": "MIT",
   "private": true,
   "dependencies": {
     "chalk": "^5.3.0",
+    "dotenv": "^16.3.1",
     "openai": "^4.24.7"
   }
 }
