--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "guess-my-gig",
-  "version": "1.0.0",
-  "main": "main.js",
-  "license": "MIT",
   "private": true,
+  "type": "module",
   "dependencies": {
     "chalk": "^5.3.0",
     "dotenv": "^16.3.1",
+    "lodash.kebabcase": "^4.1.1",
     "openai": "^4.24.7"
   }
 }
