--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "type": "module",
   "dependencies": {
     "chalk": "^5.3.0",
+    "commander": "^11.1.0",
     "dotenv": "^16.3.1",
     "lodash.kebabcase": "^4.1.1",
     "openai": "^4.24.7"
+  },
+  "bin": {
+    "guess-my-gig": "./main.js"
   }
 }
