--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "axios": "^1.6.7",
     "chalk": "^5.3.0",
     "commander": "^11.1.0",
     "dotenv": "^16.3.1",
     "lodash.kebabcase": "^4.1.1",
+    "lodash.samplesize": "^4.2.0",
+    "lodash.upperfirst": "^4.3.1",
     "openai": "^4.24.7"
   },
   "bin": {
